# adcc

./: .coveragerc  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  AUTHORS.md  LICENSE_adccore  MANIFEST.in  README.md  codecov.yml  environment.yml  generate_libadcc_stub.sh  libadcc.pyi  pyproject.toml  run_tests.sh  setup.cfg  setup.py  setup_veloxchem.sh  setupext.py  siteconfig_example.py
.github/workflows/: ci.yaml  codeql.yml  deploy_conda.yaml  publish.yaml
adcc/: AdcBlockView.py  AdcMatrix.py  AdcMethod.py  AmplitudeVector.py  ChargedExcitations.py  DataHfProvider.py  DictHfProvider.py  DipAdcMatrix.py  DipAmplitudeVector.py  ElectronicStates.py  ElectronicTransition.py  Excitation.py  ExcitedStates.py  FormatDominantElements.py  FormatIndex.py  GroundState.py  HfCounterData.py  Intermediates.py  IsrMatrix.py  LazyMp.py  MoSpaces.py  NParticleDensity.py  NParticleOperator.py  OneParticleDensity.py  OneParticleOperator.py  OperatorIntegrals.py  PpAdcMatrix.py  ReferenceState.py  State2States.py  StateView.py  Symmetry.py  Tensor.py  TwoParticleDensity.py  TwoParticleOperator.py  __init__.py  block.py  caching_policy.py  conftest.py  estimate_memory.py  exceptions.py  (+58 more)
adcc/adc_dip/: __init__.py  matrix.py  state_diffdm.py  test_modified_transition_moments.py
adcc/adc_ea/: __init__.py  matrix.py  pole_strength.py  state2state_transition_dm.py  state_diffdm.py  state_diffdm_2p.py  util.py
adcc/adc_ip/: matrix.py  pole_strength.py  state2state_transition_dm.py  state_diffdm.py  state_diffdm_2p.py  util.py
adcc/adc_pp/: __init__.py  bmatrix.py  environment.py  isrmatrix_vector_product.py  matrix.py  modified_transition_moments.py  solvent.py  state2state_transition_dm.py  state2state_transition_dm_2p.py  state_diffdm.py  state_diffdm_2p.py  test_isrmatrix_vector_product.py  test_modified_transition_moments.py  transition_dm.py  transition_dm_2p.py  transition_dm_factorized.py  util.py
adcc/backends/: EriBuilder.py  InvalidReference.py  __init__.py  available_backends.py  eri_build_helper.py  eri_construction_test.py  lr_pcm_test.py  molsturm.py  operator_import_test.py  psi4.py  pyscf.py  test_backends_crossref.py  test_backends_functionality.py  test_backends_pcm.py  test_backends_polembed.py  test_molsturm.py  test_psi4.py  test_pyscf.py  testing.py  (+4 more)
conda/: build.sh  conda_build_config.yaml  config_dev.yaml  environment.yml  environment_dev_linux.yml  meta.yaml.in
docs/: .gitignore  Doxyfile  about.rst  acknowledgements.md  acknowledgements.rst  adccore.md  adccore.rst  benchmarks.rst  calculations.md  calculations.rst  conf.py  developers.md  developers.rst  getting_started.md  gradients.rst  hostprograms.rst  index.md  index.rst  installation.md  installation.rst  libadcc.rst  license.md  license.rst  pub.bib  publications.md  publications.rst  ref.bib  reference.md  reference.rst  theory.rst  topics.rst  zpublications.rst
extension/: .ycm_extra_conf.py  AdcCore.py  CMakeLists.txt  ExportAdcc.cc  caching_policy_hack.hh  convert_timer.cc  convert_timer.hh  export_AdcIntermediates.cc  export_AdcMatrix.cc  export_AdcMemory.cc  export_AmplitudeVector.cc  export_CachingPolicy.cc  export_CtxMap.cc  export_HartreeFockProvider.cc  export_LazyMp.cc  export_MoIndexTranslation.cc  export_MoSpaces.cc  export_OneParticleDensityMatrix.cc  export_OneParticleOperator.cc  export_ReferenceState.cc  export_ReferenceStateNew.cc  export_ReferenceStateOld.cc  export_Symmetry.cc  export_Tensor.cc  export_ThreadPool.cc  export_amplitude_vector_enforce_spin_kind.cc  export_compute_modified_transition_moments.cc  export_compute_one_particle_densities.cc  export_guesses.cc  export_solve_adcman_davidson.cc  export_tmp_run_prelim.cc  hartree_fock_solution_hack.hh  util.cc  util.hh
extension/adccore/: .gitignore  lib
extension/adccore/lib/: libadccore_LICENSE
libadcc/: .ycm_extra_conf.py  AdcMemory.cc  AdcMemory.hh  AxisInfo.cc  ExportAdcc.cc  HartreeFockSolution_i.hh  MoIndexTranslation.hh  MoSpaces.cc  MoSpaces.hh  OneParticleOperator.cc  OneParticleOperator.hh  ReferenceState.cc  ReferenceState.hh  Symmetry.cc  Tensor.cc  Tensor.hh  TensorImpl.cc  TensorImpl.hh  ThreadPool.hh  Timer.cc  Timer.hh  amplitude_vector_enforce_spin_kind.cc  amplitude_vector_enforce_spin_kind.hh  backend.hh  blubb  build_tests.py  convert_timer.hh  export_AdcMemory.cc  export_HartreeFockProvider.cc  export_MoIndexTranslation.cc  export_MoSpaces.cc  export_OneParticleOperator.cc  export_Symmetry.cc  export_Tensor.cc  export_amplitude_vector_enforce_spin_kind.cc  export_threading.cc  fill_dip_doubles_guesses.cc  fill_dip_doubles_guesses.hh  fill_ea_doubles_guesses.cc  fill_ip_doubles_guesses.cc  (+10 more)
libadcc_src/: .clang-format  AxisInfo.hh  HartreeFockSolution_i.hh  MoIndexTranslation.cc  MoIndexTranslation.hh  MoSpaces.hh  ReferenceState.cc  ReferenceState.hh  Symmetry.cc  Symmetry.hh  Tensor.hh  TensorImpl.cc  TensorImpl.hh  ThreadPool.cc  ThreadPool.hh  Timer.cc  Timer.hh  amplitude_vector_enforce_spin_kind.cc  amplitude_vector_enforce_spin_kind.hh  backend.cc  config.hh  exceptions.hh  fill_ea_doubles_guesses.cc  fill_ea_doubles_guesses.hh  fill_ip_doubles_guesses.cc  fill_ip_doubles_guesses.hh  fill_pp_doubles_guesses.cc  fill_pp_doubles_guesses.hh  import_eri.cc  make_symmetry.cc  make_symmetry.hh
scripts/: .gitignore  generate_libadcc_stub.sh  load_libtensor.py  profile_pyscf_gradient_memory.py  remove_test_files.sh  upload_core.py  upload_documentation.py  upload_to_anaconda.sh  upload_to_pypi.sh
src/: export_AdcIntermediates.cc  export_HfData.cc  export_ThreadPool.cc
templates/: README.md  cc.template  cmake.template  hh.template  py.template  tmpl_settings.vim
tests/: AdcMatrix_dense_export_test.py  AdcMatrix_test.py  AmplitudeVector_test.py  DataHfProvider_test.py  ExcitedStates_test.py  IsrMatrix_test.py  LazyMp_test.py  ReferenceState_backends_test.py  ReferenceState_refdata_test.py  conftest.py  einsum_test.py  functionality_test.py  functionality_xes_test.py  guess_test.py  projection_test.py  properties_test.py  smoke_test.py  state_densities_test.py  testcases.py  testdata_cache.py
(+418 files in other folders)
